# git-hooks

./: .pre-commit-hooks.yaml  README.md  setup.cfg
src/hooks/: detect_wallet_private_key.py
