[metadata]
name = hooks
version = 1.0.0
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CoinAlpha/git-hooks
author = CoinAlpha.inc
author_email = support@hummingbot.io
license = APACHE
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    detect-wallet-private-key = hooks.detect_wallet_private_key:main
